--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
+    "react-tagcloud": "^2.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
