--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./app4.js"
+    "start": "node ./terms.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
