--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "^3.4.4",
     "react-tagcloud": "^2.1.1",
     "web-vitals": "^1.1.2"
@@ -32,5 +35,8 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-test-renderer": "^17.0.2"
+  }
 }
