--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,10 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "socket.io": "^4.4.0",
     "twitter-api-v2": "^1.6.5"
   }
 }
