--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./router.js"
+    "start": "node ./router.js",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,7 +13,11 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jest": "^27.4.3",
     "socket.io": "^4.4.0",
     "twitter-api-v2": "^1.6.5"
+  },
+  "devDependencies": {
+    "jest-sonar": "^0.2.12"
   }
 }
