sonar login token

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=jParrot2
 sonar.qualitygate.ignoreSmallChanges=False
-sonar.qualitygate.wait=True
+
+sonar.login=c87ca362a38b9a6127143e2ca2aaa1a68b76edc7
+
 sonar.sourceEncoding=UTF-8
 sonar.sources=client/src
 sonar.tests=client/src
