--- a/client/package.json
+++ b/client/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.0",
+    "core-js": "^3.20.2",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^3.4.4",
     "react-tagcloud": "^2.1.1",
+    "regenerator-runtime": "^0.13.9",
+    "socket.io-client": "^4.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -37,6 +41,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
     "react-test-renderer": "^17.0.2"
   }
 }
