--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jest": "^27.4.3",
     "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "twitter-api-v2": "^1.6.5"
   },
   "devDependencies": {
