--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,13 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^3.4.4",
     "react-tagcloud": "^2.1.1",
-    "regenerator-runtime": "^0.13.9",
     "socket.io-client": "^4.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,7 +40,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
     "@testing-library/react": "^12.1.2",
-    "react-test-renderer": "^17.0.2"
+    "babel-jest": "^27.4.6",
+    "jest": "^27.4.7",
+    "jest-sonar": "^0.2.12",
+    "react-test-renderer": "^17.0.2",
+    "regenerator-runtime": "^0.13.9"
   }
 }
