--- a/client/package.json
+++ b/client/package.json
@@ -42,11 +42,6 @@
   "devDependencies": {
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
-    "@testing-library/react": "^12.1.2",
-    "babel-jest": "^27.4.6",
-    "jest": "^27.4.7",
-    "jest-sonar": "^0.2.12",
-    "react-test-renderer": "^17.0.2",
-    "regenerator-runtime": "^0.13.9"
+    "@testing-library/react": "^12.1.2"
   }
 }
