--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^3.4.4",
     "react-tagcloud": "^2.1.1",
+    "rsuite": "^5.4.4",
     "socket.io-client": "^4.4.0",
     "web-vitals": "^1.1.2"
   },
