--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "core-js": "^3.20.2",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^3.4.4",
     "react-tagcloud": "^2.1.1",
+    "regenerator-runtime": "^0.13.9",
     "rsuite": "^5.4.4",
     "socket.io-client": "^4.4.0",
     "web-vitals": "^1.1.2"
