--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/jest-dom": "^5.16.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
@@ -23,6 +23,7 @@
     "regenerator-runtime": "^0.13.9",
     "rsuite": "^5.4.4",
     "socket.io-client": "^4.4.0",
+    "socket.io-mock": "^1.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
