--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.3.1",
     "@testing-library/jest-dom": "^5.16.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
@@ -20,6 +23,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^3.4.4",
     "react-tagcloud": "^2.1.1",
+    "react-test-renderer": "^17.0.2",
     "regenerator-runtime": "^0.13.9",
     "rsuite": "^5.4.4",
     "socket.io-client": "^4.4.0",
@@ -27,7 +31,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest --coverage",
     "eject": "react-scripts eject"
@@ -52,6 +56,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "enzyme": "^3.11.0",
     "jest-sonar": "^0.2.12",
+    "mutation-observer": "^1.0.3",
     "prettier": "2.5.1"
   }
 }
