sonar-project.properties big fix

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,39 +1,10 @@
 sonar.projectKey=jParrot2
-#sonar.qualitygate.ignoreSmallChanges=False
+sonar.qualitygate.ignoreSmallChanges=False
 
 sonar.login=c87ca362a38b9a6127143e2ca2aaa1a68b76edc7
 
 sonar.sourceEncoding=UTF-8
-
-#sonar.javascript.lcov.reportPaths=coverage/lcov.inf
-
-
-#sonar.sources=server/routes,client/src
-#sonar.tests=server/test,client/test
-
-# Now specify path of lcov and testlog
-#sonar.javascript.lcov.reportPaths=coverage/jest/lcov.info
-#"sonar.testExecutionReportPaths=coverage/jest/testlog.xml"
-
-#"sonar.javascript.lcov.reportPaths=server/coverage/lcov.info"
-
-#sonar-scanner.bat -D"sonar.host.url=https://aminsep.disi.unibo.it/sonarqube" -D"sonar.login=c87ca362a38b9a6127143e2ca2aaa1a68b76edc7
-
-#"sonar.test.inclusions=server/routes/**/*.js,client/src/**/*.js,server/test/*.test.js,client/test/*.test.js"
-
-
-#"sonar.testExecutionReportPaths=coverage/sonar-report.xml"
-
-
-
-#
-#sonar.projectKey=jParrot2
-#sonar.host.url=http://localhost:9000
-#sonar.login=c0969ffddc7faba806c50ecfa565c6c5aa63c5c2
-#
-#sonar.tests=server/test,client/test
-#sonar.sources=server/routes,client/src
-#sonar.testExecutionReportPaths=server/coverage/sonar-report.xml,client/coverage/sonar-report.xml
-
-#sonar-scanner.bat -D"sonar.projectKey=jParrot2" -D"sonar.host.url=http://localhost:9000" -D"sonar.login=c0969ffddc7faba806c50ecfa565c6c5aa63c5c2" -D"sonar.tests=server/test,client/test" -D"sonar.sources=server/routes,client/src" -D"sonar.test.inclusions=server/routes/**/*.js,client/src/**/*.js,server/test/*.test.js,client/test/*.test.js" -D"sonar.javascript.lcov.reportPaths=server/coverage/lcov.info" -D"sonar.testExecutionReportPaths=server/coverage/sonar-report.xml"
-
+sonar.tests=server/test,client/test
+sonar.sources=server/routes,client/src
+sonar.javascript.lcov.reportPaths=server/coverage/lcov.info,client/coverage/lcov.info
+sonar.testExecutionReportPaths=server/coverage/sonar-report.xml,client/coverage/sonar-report.xml
