sonar-project.properties small fix

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=jParrot2
 sonar.qualitygate.ignoreSmallChanges=False
+sonar.host.url=http://localhost:9000/
 
 sonar.login=c87ca362a38b9a6127143e2ca2aaa1a68b76edc7
 
