--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,11 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.6.3",
     "jest": "^27.4.3",
     "mock-socket": "^9.0.8",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
     "twitter-api-v2": "^1.6.5"
