--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.3.1",
     "@testing-library/jest-dom": "^5.16.1",
+    "animate.css": "^4.1.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
